# py-spatiafi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .requirements.sha256  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
scripts/: bootstrap_dev.sh  build_docker.sh  gen_requirements.sh  install_package.sh  test.sh  upload_pypi.sh
src/py_spfi_api/: __init__.py
src/spatiafi/: __init__.py  __main__.py  async_queue.py  auth.py  main.py  session.py
src/spatiafi/gdal_auth/: __init__.py  __main__.py  cli.py  gdal_auth.py
tests/: test_async_queue.py  test_async_queue_uk.py  test_get_session.py
workflows/: README.md  delpoy-sensor.sh  kustomization.yaml  py-spfi-api-build-wf.yaml  repo-sensor.yaml  submit-wf.sh
