[build-system]
requires = [
    "setuptools >= 42",
    "setuptools_scm[toml] >= 7.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.ruff]
# ignore line length (E501) and let black handle it
ignore = ['E501', 'C901']
select = ["C", "E", "F", "W"]

    [tool.ruff.per-file-ignores]
    "__init__.py" = ["E402", "F401"]

[tool.setuptools_scm]
write_to = "src/spatiafi/_version.py"
# same as default regex except it makes "v" prefix mandatory (with the exception of 0.0, which is the default version)
#  and no prefix before the version string is allowed
tag_regex = "^(?P<version>(v\\d+(?:\\.\\d+){0,2}[^\\+]*)|(0.0))(?:\\+.*)?$"
version_scheme = "release-branch-semver"
local_scheme = "node-and-timestamp"
