[metadata]
name = py-spfi-api
version = attr: py_spfi_api.__version__
author = Climate Engine Team
author_email = admin@climateengine.com
description = Python library for interacting with the SpatiaFi API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/climateengine/py-spfi-api

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.10
include_package_data = true

# Add dependencies here
# List gdal twice! Running pip-compile on linux will only include the first line in the requirements.txt file.
# But because it is a conditional dependency, (and will be in the compiled reqs.txt) this line in reqs.txt
# it will be ignored by other operating systems. This lets us pin all dependencies except gdal to the same version.

#install_requires =
    #gdal ==3.3.2 ; sys_platform == "linux"
    #gdal ~=3.3.2

[options.extras_require]
dev =  # Specify dev dependencies here
    autoflake
    black
    build
    flake8
    flake8-pyproject
    isort
    keyring
    keyrings.google-artifactregistry-auth
    mypy
    pip-tools
    pre-commit
    pytest
    pytest-cov
    setuptools_scm[toml] >= 7.0.0
    tox
    twine
    wheel

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    py-spfi-api = py_spfi_api.main:main
