[metadata]
name = spatiafi
version = attr: spatiafi.__version__
author = Climate Engine Team
author_email = admin@climateengine.com
description = Python library for interacting with the SpatiaFi API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/climateengine/py-spatiafi

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8
include_package_data = true

# Add dependencies here
install_requires =
    authlib
    click
    google-api-core
    google-auth
    google-auth-oauthlib
    httpx
    platformdirs
    requests

[options.extras_require]
dev =
    autoflake
    black
    build
    flake8
    flake8-pyproject
    isort
    keyring
    keyrings.google-artifactregistry-auth
    mypy
    pandas
    pip-tools
    pre-commit
    pytest
    pytest-cov
    setuptools_scm[toml] >= 7.0.0
    tox
    twine
    wheel

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gdal-auth = spatiafi.gdal_auth:cli
